add work images

--- a/fencing.html
+++ b/fencing.html
@@ -38,6 +38,7 @@
     <p>If you’re looking for a fence that looks attractive, offers visibility and acts as a security barrier, picket fencing is the way to go. If you need more seclusion and don’t want nosey neighbors peering in, you should install a privacy fence. We have a wide variety of picket and privacy fence options to choose from.</p>
     <p>We also offer your standard galvanized and black coated chain link. Our fencing installers can get you the most bang for your buck with a chain link fence while also providing a long term solution to keeping your kids and pets in and other critters out. Our fencing installers will secure all fence posts in concrete to ensure stability and durability for years to come.</p>
     <p>Reach out to us right away to arrange for expert fencing services.</p>
+    <p>Choose T.E.A.M. Builders for fence installation services in the Cedar Falls and Cedar Rapids, IA area. Installing a fence is a smart investment because it will:</p>
     <br />
     <div class="feature-container">
       <div class="feature">
@@ -66,21 +67,25 @@
           <br />
             <div class="bg-gray">
             <h3>Keep your kids and pets safe.</h3>
-            <p>Choose T.E.A.M. Builders for fence installation services in the Cedar Falls and Cedar Rapids, IA area. Installing a fence is a smart investment because it will:</p>
-            <p>Call 319-481-8326 now to schedule fence installation services. Our fencing contractor will be glad to provide you with a free estimate. We also offer a wide variety of in-house financing to clients who are interested in financing options.</p>
+            <p>Call <a href="tel:3194818326">319-481-8326 </a>now to schedule fence installation services. Our fencing contractor will be glad to provide you with a free estimate. We also offer a wide variety of in-house financing to clients who are interested in financing options.</p>
             <br />
             <a class="btn btn-primary" href="/contac">Contact Us</a>
           </div>
           <br />
           <h4 class="h1">Our Work</h4>
           <div class="our-work-images">
+            <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/fencing/CRTreatedWoodFence.jpg" alt="Treated Wood Fence Cedar Rapids">
+            <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/fencing/ExteriorViewTreatedWoodFence.jpg" alt="Exterior View of Treated Wood Fence">
+            <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/fencing/PlantHangingOnFence.jpg" alt="Decorative Plant Hanging on Fence">
+            <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/fencing/TreatedFenceYardView.jpg" alt="Treated Wood Fence with View of Yard">
+            <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/fencing/TreatedWoodFenceCR.jpg" alt="Treated Wood Fence in Cedar Rapids">
             <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/fencing/woodpicketfence.jpg" alt="Wood Picket Fence">
             <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/fencing/woodpicketfencewide.jpg" alt="Wood Picket Fence Wide View">
             <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/fencing/1557250048495_fence_4.png" alt="Fence">
             <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/fencing/nichols-fence.png" alt="Nichols Fence">
             <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/fencing/final-fence.png" alt="Final Fence">
             <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/fencing/IMG_4690.jpg" alt="Black Wire Fence">
-          </div>
+        </div>
       </div>
     </div>
     <section class="gradient-banner">
