--- a/our-work.html
+++ b/our-work.html
@@ -105,28 +105,55 @@
             <div class="our-work-accordion" data-accordion>
               <div data-control>Fences</div>
               <div data-content>
-                <img class="our-work-image lazyload" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/fencing/woodpicketfence.jpg" alt="Wood Picket Fence">
-                <img class="our-work-image lazyload" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/fencing/woodpicketfencewide.jpg" alt="Wood Picket Fence Wide View">
-                <img class="our-work-image lazyload" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/fencing/final-fence.png" alt="Final Fence">
-                <img class="our-work-image lazyload" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/fencing/nichols-fence.png" alt="Nichols Fence">
-                <img class="our-work-image lazyload" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/fencing/1557250048495_fence_4.png" alt="Fence">
-                <img class="our-work-image lazyload" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/fencing/IMG_4690.jpg" alt="Black Wire Fence">
+                <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/fencing/CRTreatedWoodFence.jpg" alt="Treated Wood Fence Cedar Rapids">
+                <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/fencing/ExteriorViewTreatedWoodFence.jpg" alt="Exterior View of Treated Wood Fence">
+                <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/fencing/PlantHangingOnFence.jpg" alt="Decorative Plant Hanging on Fence">
+                <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/fencing/TreatedFenceYardView.jpg" alt="Treated Wood Fence with View of Yard">
+                <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/fencing/TreatedWoodFenceCR.jpg" alt="Treated Wood Fence in Cedar Rapids">    
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/fencing/woodpicketfence.jpg" alt="Wood Picket Fence">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/fencing/woodpicketfencewide.jpg" alt="Wood Picket Fence Wide View">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/fencing/final-fence.png" alt="Final Fence">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/fencing/nichols-fence.png" alt="Nichols Fence">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/fencing/1557250048495_fence_4.png" alt="Fence">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/fencing/IMG_4690.jpg" alt="Black Wire Fence">
               </div>
             </div>
             <div class="our-work-accordion" data-accordion>
              <div data-control>Roofing</div>
               <div data-content>
-                <img class="our-work-image lazyload" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/overheadgrayshingles2.jpg" alt="Overhead View of Gray Shingles">
-                <img class="our-work-image lazyload" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/overheadgrayshingles.jpg" alt="Overhead View of Gray Shingles">    
-                <img class="our-work-image lazyload" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/DJI_0665.JPG" alt="Clay Roof">
-                <img class="our-work-image lazyload" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/claysiding.jpg" alt="Clay Shingles">
-                <img class="our-work-image lazyload" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/r-3.jpg" alt="Roof 3">
-                <img class="our-work-image lazyload" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/Roofing_1.jpg" alt="Roof 4">
+                <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/roofing/aerialViewNewRoof.jpg" alt="Aerial View of New Roof">
+                <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/roofing/angledViewOfRoofRepair.jpg" alt="Angled View of Roof Repair">
+                <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/roofing/brandNewRoof.jpg" alt="Brand New Roof">
+                <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/roofing/cedarRapidsRoofRepair.jpg" alt="Cedar Rapids Roof Repair">
+                <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/roofing/newShingledRoof.jpg" alt="New Shingled Roof">
+                <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/roofing/overheadRoof.jpg" alt="Overhead Roof">
+                <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/roofing/repairedRoof.jpg" alt="Repaired Roof">
+                <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/roofing/roofRepair.jpg" alt="Roof Repair">
+                <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/roofing/roofRepairAerialView.jpg" alt="Roof Repair Aerial View">
+                <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/roofing/sideAerialViewOfRoof.jpg" alt="Side Aerial View of Roof">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/overheadgrayshingles2.jpg" alt="Overhead View of Gray Shingles">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/overheadgrayshingles.jpg" alt="Overhead View of Gray Shingles">    
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/DJI_0665.JPG" alt="Clay Roof">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/claysiding.jpg" alt="Clay Shingles">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/r-3.jpg" alt="Roof 3">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/Roofing_1.jpg" alt="Roof 4">
               </div>
             </div>
             <div class="our-work-accordion" data-accordion>
              <div data-control>Decks</div>
               <div data-content>
+                <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/decks/compositeDeck.jpg" alt="Composite Deck">
+                <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/decks/compositeDeckAerialView.jpg" alt="Composite Deck Aerial View">
+                <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/decks/compositeDeckBlackRailing.jpg" alt="Composite Deck with Black Railing">
+                <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/decks/compositeDeckCircularStairs.jpg" alt="Composite Deck with Circular Stairs">
+                <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/decks/compositeDeckComingUpStairs.jpg" alt="Composite Deck View from Bottom of Stairs">
+                <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/decks/compositeDeckRailingHouse.jpg" alt="View of Composite Deck Facing House">
+                <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/decks/compositeDeckTopOfStairwell.jpg" alt="View of Composite Deck from Top of Stairwell">
+                <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/decks/compositeDeckWideAerialView.jpg" alt="Composite Deck Full Aerial View">
+                <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/decks/curvedWhiteRailingWoodTrim.jpg" alt="Curved While Railing with Wood Trim">
+                <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/decks/fullViewOfCompositeDeckStairs.jpg" alt="Full View of Composite Deck with Two Tone Stairs">
+                <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/decks/roundedCompositeDeck.jpg" alt="Rounded Composite Deck">
+                <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/decks/twoTonedStepsUpClose.jpg" alt="Up Close View of Two Tone Composite Steps">
                 <img class="our-work-image lazyload" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/back-deck-side-view.jpg" alt="New Deck Floorplan">
                 <img class="our-work-image lazyload" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/deck-swing.jpg" alt="New Deck Floorplan">
                 <img class="our-work-image lazyload" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/170675172_1440051539679610_1279784568954226672_n.jpg" alt="New Deck Floorplan">
@@ -204,6 +231,20 @@
             <div class="our-work-accordion" data-accordion>
              <div data-control>Siding</div>
               <div data-content>
+                <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/siding/blueVinylSidingCR.jpg" alt="Blue Vinyl Siding in Cedar Rapids">
+                <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/siding/blueVinylSidingFrontView.jpg" alt="Blue Vinyl Siding Front View">
+                <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/siding/graySidingFrontPorchView.jpg" alt="Gray Siding Front Porch View">
+                <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/siding/grayVinylSiding.jpg" alt="Gray Vinyl Siding">
+                <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/siding/vinylGraySiding.jpg" alt="Vinyl Gray Siding">
+                <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/siding/innerViewGraySiding.jpg" alt="Inner View of Gray Siding">
+                <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/siding/navyBlueSiding.jpg" alt="Navy Blue Siding">
+                <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/siding/navyBlueSidingOverheadView.jpg" alt="Navy Blue Siding Overhead View">
+                <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/siding/navySidingWithViewOfTree.jpg" alt="Navy Siding with Tree in the Foreground">
+                <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/siding/tealGreenSiding.jpg" alt="Teal Green Siding">
+                <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/siding/tealGreenCloseUpSiding.jpg" alt="Teal Green Close Up View of Siding">
+                <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/siding/tealGreenSidingCompositeStairs.jpg" alt="Teal Green Siding and Composite Stairs">
+                <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/siding/tealGreenSidingViewFromLeft.jpg" alt="Teal Green Siding View from Left">
+                <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/siding/tealGreenVinylSiding.jpg" alt="Teal Green Vinyl Siding">
                 <img class="our-work-image lazyload" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/siding/bluesiding.jpg" alt="Blue Siding">
                 <img class="our-work-image lazyload" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/siding/bluesidingwithbrick.jpg" alt="Blue Siding w/ Brick">
                 <img class="our-work-image lazyload" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/siding/redsiding.jpg" alt="Red Siding">
