--- a/roofing.html
+++ b/roofing.html
@@ -29,7 +29,7 @@
     <div class="hero-nav roofing">
     <div class="hero-nav__inner">
         <h1>Install a Durable, Attractive Roof</h1>
-        <a class="btn btn-primary" href="/contact-us">See how we can help finance</a>
+        <a class="btn btn-primary" href="#roofing-work">View Our Work</a>
     </div>
 </div>
 <div id="roofing-estimate-form">
@@ -259,8 +259,18 @@
         </ul>
       </div>
     </div>
-          <h4 class="h1">Our Work</h4>
+          <h4 class="h1" id="roofing-work">Our Work</h4>
           <div class="our-work-images">
+            <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/roofing/aerialViewNewRoof.jpg" alt="Aerial View of New Roof">
+            <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/roofing/angledViewOfRoofRepair.jpg" alt="Angled View of Roof Repair">
+            <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/roofing/brandNewRoof.jpg" alt="Brand New Roof">
+            <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/roofing/cedarRapidsRoofRepair.jpg" alt="Cedar Rapids Roof Repair">
+            <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/roofing/newShingledRoof.jpg" alt="New Shingled Roof">
+            <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/roofing/overheadRoof.jpg" alt="Overhead Roof">
+            <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/roofing/repairedRoof.jpg" alt="Repaired Roof">
+            <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/roofing/roofRepair.jpg" alt="Roof Repair">
+            <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/roofing/roofRepairAerialView.jpg" alt="Roof Repair Aerial View">
+            <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/roofing/sideAerialViewOfRoof.jpg" alt="Side Aerial View of Roof">
             <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/r-1.jpg" alt="Roofing">
             <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/r-2.jpg" alt="Roofing">
             <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/Roofing_1.jpg" alt="Roofing">
@@ -269,7 +279,6 @@
             <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/overheadgrayshingles2.jpg" alt="Overhead View of Gray Shingles">
             <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/overheadgrayshingles.jpg" alt="Overhead View of Gray Shingles">
             <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/claysiding.jpg" alt="Clay Shingles">
-
           </div>
       </div>
     </div>
