--- a/siding.html
+++ b/siding.html
@@ -91,6 +91,20 @@ Will protect your home from the elements</p>
           </ol>
           <h4 class="h1">Our Work</h4>
           <div class="our-work-images">
+            <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/siding/blueVinylSidingCR.jpg" alt="Blue Vinyl Siding in Cedar Rapids">
+            <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/siding/blueVinylSidingFrontView.jpg" alt="Blue Vinyl Siding Front View">
+            <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/siding/graySidingFrontPorchView.jpg" alt="Gray Siding Front Porch View">
+            <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/siding/grayVinylSiding.jpg" alt="Gray Vinyl Siding">
+            <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/siding/vinylGraySiding.jpg" alt="Vinyl Gray Siding">
+            <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/siding/innerViewGraySiding.jpg" alt="Inner View of Gray Siding">
+            <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/siding/navyBlueSiding.jpg" alt="Navy Blue Siding">
+            <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/siding/navyBlueSidingOverheadView.jpg" alt="Navy Blue Siding Overhead View">
+            <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/siding/navySidingWithViewOfTree.jpg" alt="Navy Siding with Tree in the Foreground">
+            <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/siding/tealGreenSiding.jpg" alt="Teal Green Siding">
+            <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/siding/tealGreenCloseUpSiding.jpg" alt="Teal Green Close Up View of Siding">
+            <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/siding/tealGreenSidingCompositeStairs.jpg" alt="Teal Green Siding and Composite Stairs">
+            <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/siding/tealGreenSidingViewFromLeft.jpg" alt="Teal Green Siding View from Left">
+            <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/siding/tealGreenVinylSiding.jpg" alt="Teal Green Vinyl Siding">
             <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/siding/bluesiding.jpg" alt="Blue Siding">
             <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/siding/bluesidingwithbrick.jpg" alt="Blue Siding w/ Brick">
             <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/siding/redsiding.jpg" alt="Red Siding">
