--- a/deck-pergolas.html
+++ b/deck-pergolas.html
@@ -45,11 +45,10 @@
     <div id="mc_embed_signup">
         <form action="https://teambuilderslimited.us2.list-manage.com/subscribe/post?u=3505b437145ee33b184d2b30a&amp;id=5ee4451a83" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
             <div id="mc_embed_signup_scroll">
-        <label for="mce-EMAIL" style="color: #666;">Discover Trends, Ideas, Inspiration &amp; Products</label>
-        <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Email address" style="border: 1px solid #666!important;" required>
-            <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-            <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_3505b437145ee33b184d2b30a_5ee4451a83" tabindex="-1" value=""></div>
-            <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn btn-primary"></div>
+                <label for="mce-EMAIL" style="color: #666;">Discover Trends, Ideas, Inspiration &amp; Products</label>
+                <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Email address"required>
+                <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_3505b437145ee33b184d2b30a_5ee4451a83" tabindex="-1" value=""></div>
+                <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn btn-primary"></div>
             </div>
         </form>
     </div>
@@ -57,6 +56,18 @@
           <br />
           <h4 class="h1">Our Work</h4>
           <div class="our-work-images">
+            <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/decks/compositeDeck.jpg" alt="Composite Deck">
+            <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/decks/compositeDeckAerialView.jpg" alt="Composite Deck Aerial View">
+            <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/decks/compositeDeckBlackRailing.jpg" alt="Composite Deck with Black Railing">
+            <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/decks/compositeDeckCircularStairs.jpg" alt="Composite Deck with Circular Stairs">
+            <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/decks/compositeDeckComingUpStairs.jpg" alt="Composite Deck View from Bottom of Stairs">
+            <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/decks/compositeDeckRailingHouse.jpg" alt="View of Composite Deck Facing House">
+            <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/decks/compositeDeckTopOfStairwell.jpg" alt="View of Composite Deck from Top of Stairwell">
+            <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/decks/compositeDeckWideAerialView.jpg" alt="Composite Deck Full Aerial View">
+            <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/decks/curvedWhiteRailingWoodTrim.jpg" alt="Curved While Railing with Wood Trim">
+            <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/decks/fullViewOfCompositeDeckStairs.jpg" alt="Full View of Composite Deck with Two Tone Stairs">
+            <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/decks/roundedCompositeDeck.jpg" alt="Rounded Composite Deck">
+            <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/decks/twoTonedStepsUpClose.jpg" alt="Up Close View of Two Tone Composite Steps">
             <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/back-deck-side-view.jpg" alt="New Deck Floorplan">
             <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/deck-swing.jpg" alt="New Deck Floorplan">
             <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/170675172_1440051539679610_1279784568954226672_n.jpg" alt="New Deck Floorplan">
