add our work images

--- a/our-work.html
+++ b/our-work.html
@@ -255,13 +255,32 @@
                 <img class="our-work-image lazyload" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/siding/Siding_3.jpg" alt="Siding Tan House">
               </div>
             </div>
+            <div class="our-work-accordion" data-accordion>
+                <div data-control>Garages</div>
+                 <div data-content>
+                    <img class="our-work-image lazyload" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/shed-houses/IMG_0115.jpg" alt="2 Stall Garage w/ Orange Accents">
+                 </div>
+               </div>
           </div>
         </div>
       </div>
       <div class="row">
         <div class="col">
-          <h2>Shed Homes</h2>
+          <h2>Home Additions & Shed Homes</h2>
           <div data-accordion-group>
+            <div class="our-work-accordion" data-accordion>
+                <div data-control>Home Additions</div>
+                <div data-content>
+                  <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/home-additions/home+additions.JPG" alt="Home Additions">
+                  <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/home-additions/homeAdditionAerialView.jpg" alt="Aerial View of Home Addition">
+                  <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/home-additions/homeAdditionCedarFalls.jpg" alt="Home Addition Cedar Falls">
+                  <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/home-additions/homeAdditionBedroom.jpg" alt="Bedroom Inside of New Home Addition">
+                  <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/home-additions/laundryRoom.jpg" alt="Laundry Room Inside of New Home Addition">
+                  <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/home-additions/multipleStairwellsAddition.jpg" alt="Home Addition with Multiple Stairwells">
+                  <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/home-additions/seamlessBlueHomeAddition.jpg" alt="Seamless Blue Home Addition">
+
+                </div>
+              </div>
             <div class="our-work-accordion" data-accordion>
               <div data-control>Shed Houses "Shouses"</div>
               <div data-content>
@@ -269,7 +288,6 @@
                 <img class="our-work-image lazyload" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/shed-houses/shed-loft.png" alt="Shed Loft">
                 <img class="our-work-image lazyload" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/shed-houses/red-shed.png" alt="Red Shed">
                 <img class="our-work-image lazyload" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/shed-houses/104325409_1212319002452866_4642715789160996502_n.jpg" alt="Shed w/ Small Deck and Chairs">
-                <img class="our-work-image lazyload" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/shed-houses/IMG_0115.jpg" alt="2 Stall Garage w/ Orange Accents">
               </div>
             </div>
             <div class="our-work-accordion" data-accordion>
