increase size of social icons

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
     <link href="cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
-    <script src="js/script.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="js/script.js"></script>
     <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
    <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -49,7 +49,7 @@
     </div>
     <div>
       <div>
-          <img src="https://d319epilr9o2mf.cloudfront.net/work/decks/large-gray-deck.jpg" alt="Large Multilevel Gray Deck in Cedar Falls, IA">
+          <img src="https://d319epilr9o2mf.cloudfront.net/work/decks/large-gray-deck.jpg" alt="Large Multilevel Gray Deck in Cedar Falls, IA" style="min-width: 100%;">
       </div>
     </div>
     </div>
@@ -136,7 +136,7 @@
           <h3><a href="/interior-remodeling">Home Additions</a></h3>
         </div>
         <div class="service-card-image">
-          <img src="https://d319epilr9o2mf.cloudfront.net/work/home-additions/home%2Badditions.jpeg" alt="Home Additions" class="lazyload">
+          <img src="https://d319epilr9o2mf.cloudfront.net/work/home-additions/seamlessBlueHomeAddition.jpg" alt="Home Additions" class="lazyload">
         </div>
       </div>
       <div class="service-card">
