our work filtering

--- a/our-work.html
+++ b/our-work.html
@@ -10,6 +10,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
     <meta name="description" content="See our process come to life by viewing work done by T.E.A.M. Builders in Cedar Falls, IA">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="js/mixitup.min.js"></script>
+    <script src="js/script.min.js"></script>  
     <!-- Global site tag (gtag.js) - Google Analytics -->
    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-188956910-1">
    </script>
@@ -324,8 +327,5 @@
   <section id="contactus"></section>
   <footer id="footer">
   </footer>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="js/script.min.js"></script>
-  <script src="js/loadTemplate.js"></script>
   </body>
 </html>
