--- a/index.html
+++ b/index.html
@@ -228,7 +228,11 @@
           </div>
           <p>
             This team is absolutely awesome. They were very thorough and verified everything before moving forward. They made sure we were satisfied with all items. They even came back quickly to add Lattice upon my request. Let me just say, my deck looks 100% better than it did before they started. I am absolutely amazed at the finished work. I highly, highly recommend T.E.A.M. Builders
-          </p
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
 
   <section class="gradient-banner">
      <div class="gradient-content">
