--- a/our-work.html
+++ b/our-work.html
@@ -56,7 +56,7 @@
                     <a href="#garages" class="btn btn-outline">Garages</a>
                     <a href="#home-additions" class="btn btn-outline">Home Additions</buatton>
                     <a href="#shouses" class="btn btn-outline">Shed Houses "Shouses"</a>
-                    <a href="#commercial" class="btn btn-outline">Agricultural & Commercial Buildings</a>
+                    <a href="#commercial" class="btn btn-outline">Ag & Commercial Buildings</a>
                     <a href="#event-venues" class="btn btn-outline">Event Venues</a>
                 </div>
             </div>
