--- a/index.html
+++ b/index.html
@@ -139,12 +139,20 @@
           <img src="https://d319epilr9o2mf.cloudfront.net/work/home-additions/seamlessBlueHomeAddition.jpg" alt="Home Additions" class="lazyload">
         </div>
       </div>
-      <div class="service-card">
+      <div class="service-card mr-20">
         <div class="service-card-header">
           <h3><a href="/shed-homes-shouses">Shed Houses</a></h3>
         </div>
         <div class="service-card-image">
           <img src="https://d319epilr9o2mf.cloudfront.net/work/commercial/farm-shed.png" alt="Agricultural & Commrcial Buidings" class="lazyload">
+        </div>
+      </div>
+      <div class="service-card">
+        <div class="service-card-header">
+          <h3><a href="/garages.html">Garages</a></h3>
+        </div>
+        <div class="service-card-image">
+          <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/shed-houses/IMG_0115.jpg" alt="Garages"loading="lazy">
         </div>
       </div> 
      </div> 
