add garages page

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
       </div>
       <div class="service-card">
         <div class="service-card-header">
-          <h3><a href="/garages.html">Garages</a></h3>
+          <h3><a href="/garages">Garages</a></h3>
         </div>
         <div class="service-card-image">
           <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/shed-houses/IMG_0115.jpg" alt="Garages"loading="lazy">
