add garages page

--- a/garages.html
+++ b/garages.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Garages | T.E.A.M. Builders Ltd.</title>
+    <title>Garages in Cedar Falls, Cedar Rapids, and Surrounding Areas | T.E.A.M. Builders Ltd.</title>
     <link rel="shortcut icon" type="image/png" href="https://teambuilders-media.s3.us-east-2.amazonaws.com/favicon.png">
     <link href="css/main.min.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
-    <meta name="description" content="Event Venues. Creating any size detailed and decorated building/barn for all events, such as wineries, weddings, and large group gatherings.">
+    <meta name="description" content="Garages in Cedar Falls, Cedar Rapids, and surrounding areas">
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-188956910-1">
 </script>
@@ -33,7 +33,6 @@ gtag('config', 'UA-188956910-1');
     </div>
 </div>
 <div class="subpage-content">
-  <h2>Garages in Cedar Falls, Cedar Rapids, and surrounding areas</h2>
     <p>
         T.E.A.M. Builders Ltd. can take charge of your new garage build in Cedar Falls, Cedar Rapids or surrounding areas. Whether you want to convert your boring garage into a man cave or start over brand new with high vaulted ceilings or custom designs, we have got your back! 
         We have the tools, experience, and team needed to remodel or build your garage from the ground up!  We can reside, install a new roof,  install new flooring and lighting and tear down unwanted walls. In short, we’ll bring your dream garage to life.
@@ -42,12 +41,12 @@ gtag('config', 'UA-188956910-1');
     </p>
     <br />
     <div class="bg-gray">
-      <h3>Get in touch with us today to discuss the details of your new garage.</h3>
+      <h2>Get in touch with us today to discuss the details of your new garage.</h3>
       <a class="btn btn-primary" href="/contact">Contact Us</a>
     </div>
       <div class="text-align-left">
           <br />
-          <h4 class="h1">Our Work</h4>
+          <h3 class="h1">Our Work</h4>
           <div class="our-work-images">
             <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/shed-houses/IMG_0115.jpg" alt="2 Stall Garage w/ Orange Accents">
           </div>
