update insurance claims page

--- a/insurance-claims.html
+++ b/insurance-claims.html
@@ -38,7 +38,7 @@
       <br />
       <br />
       <br />
-      <p><strong>Scenario:</strong> There was a hail storm or windstorm that just came through. You are sure you have damages, or are concerned you may have damaged or leaking that you want to prevent from creating further problems. You want a contractor or a reputable company that you can trust to guide you through the process.</p>
+      <p><strong>Scenario:</strong> There was a hail storm or windstorm that just came through. You are sure you have damages, or are concerned you may have damaged or leaking that you want to prevent from creating further problems. You want a contractor or a reputable company that you can trust to guide you through the rebuilding process.</p>
     </div>
     <br />
   </div>
